--- a/spec/cassettes/Google/_map_data/must_map_google_results_to_the_expected_format.yml
+++ b/spec/cassettes/Google/_map_data/must_map_google_results_to_the_expected_format.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://customsearch.googleapis.com/customsearch/v1?cx=&key=&q=test
+    uri: http://customsearch.googleapis.com/customsearch/v1?cx=c92e36d4389be4fb8&key=AIzaSyAHl2C-VjoShpRPI4E2Nv0aTcxwlv0xRqg&q=test
     body:
       encoding: US-ASCII
       string: ''
@@ -27,39 +27,36 @@ http_interactions:
       Content-Type:
       - application/json; charset=UTF-8
       Date:
-      - Sun, 06 Dec 2020 22:50:20 GMT
+      - Mon, 07 Dec 2020 07:03:55 GMT
       Server:
       - ESF
       Cache-Control:
       - private
+      Content-Length:
+      - '177'
       X-Xss-Protection:
       - '0'
       X-Frame-Options:
       - SAMEORIGIN
       X-Content-Type-Options:
       - nosniff
-      Alt-Svc:
-      - h3-29=":443"; ma=2592000,h3-T051=":443"; ma=2592000,h3-Q050=":443"; ma=2592000,h3-Q046=":443";
-        ma=2592000,h3-Q043=":443"; ma=2592000,quic=":443"; ma=2592000; v="46,43"
-      Transfer-Encoding:
-      - chunked
     body:
       encoding: ASCII-8BIT
       string: |
         {
           "error": {
             "code": 403,
-            "message": "The request is missing a valid API key.",
+            "message": "SSL is required to perform this operation.",
             "errors": [
               {
-                "message": "The request is missing a valid API key.",
+                "message": "SSL is required to perform this operation.",
                 "domain": "global",
-                "reason": "forbidden"
+                "reason": "sslRequired"
               }
             ],
             "status": "PERMISSION_DENIED"
           }
         }
     http_version: null
-  recorded_at: Sun, 06 Dec 2020 22:50:20 GMT
+  recorded_at: Mon, 07 Dec 2020 07:03:54 GMT
 recorded_with: VCR 5.1.0
