Implemented Bing search using web scraping instead of API

--- a/config/services_credentials.yml
+++ b/config/services_credentials.yml
@@ -4,6 +4,7 @@ default: &default
     api_key: <%= ENV['GOOGLE_API_KEY'] %>
 
   bing:
+    user_agent: 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36'
     subscription_key: <%= ENV['BING_SUBSCRIPTION_KEY'] %>
 
 development:
