--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -12,7 +12,7 @@ on:
     branches: [ "develop" ]
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ruby:3.3.4
     services:
       postgres:
         image: postgres:11-alpine
@@ -38,7 +38,7 @@ jobs:
         run: bundle exec rspec
 
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ruby:3.3.4
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
